--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -32,6 +32,11 @@ body {
     color: pink !important;
 }
 
+.masthead-avatar {
+    border: 8px solid white;
+    border-radius: 50%;
+}
+
 #portfolio h2, #contact h2 {
     color: #311f3b !important;
 }
@@ -66,6 +71,17 @@ body {
 
 #music h2 {
     color: pink;
+}
+
+@media (max-width: 400px) {
+    .navbar-brand {
+        font-size: 1.05em;
+    }
+}
+@media (max-width: 575px) {
+    .navbar li {
+        text-align: center;
+    }
 }
 /* 
 .divider-custom-line {
