--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -73,12 +73,16 @@ body {
     color: pink;
 }
 
+.portfolio-item-caption:hover {
+    background-color: blue;
+}
+
 @media (max-width: 400px) {
     .navbar-brand {
         font-size: 1.05em;
     }
 }
-@media (max-width: 575px) {
+@media (max-width: 991px) {
     .navbar li {
         text-align: center;
     }
