--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -127,3 +127,7 @@ body {
     max-width: 100%;
     height: calc(width * .75);
   }
+
+  #contactFormspree input, #contactFormspree textarea {
+    border-bottom: 1px grey solid;
+}
