--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -86,6 +86,11 @@ body {
     column-span: 2;
 }
 
+.iframeFix {
+    width: 100%;
+    height: calc(70vw/1.77);
+}
+
 @media (max-width: 400px) {
     .navbar-brand {
         font-size: 1.05em;
@@ -100,6 +105,10 @@ body {
     .youtube {
         padding-top: 4em;
     }
+    .iframeFix {
+        width: 100%;
+        height: calc(90vw/1.77);
+    }
 }
 
 @media (max-width: 750px) {
@@ -109,6 +118,7 @@ body {
     .insideColumns {
         column-span: 1;
     }
+
 }
 /* 
 .divider-custom-line {
@@ -131,3 +141,4 @@ body {
   #contactFormspree input, #contactFormspree textarea {
     border-bottom: 1px grey solid;
 }
+
